<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/width_foto"
            android:layout_height="@dimen/height_foto"
            android:layout_margin="@dimen/margin_foto"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/kris" />

        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_nama"
            android:textSize="@dimen/title_text"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/batas_atas"
            android:layout_marginBottom="@dimen/batas_bawah"
            android:text="@string/about_email"
            android:layout_gravity="center"
            android:gravity="center" />
        <TextView
            android:id="@+id/sumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_sumber"
            android:layout_gravity="center"
            android:gravity="center" />
    </LinearLayout>
</ScrollView>